        * Modified Auth_Check, which is used by DocAccessHook, to
        disallow retrieval of .tml, .tclaccess and .htaccess files.
        This vulnerability was identified by David Welton, although
        I'll note you had to had permission to retrieve the access
        control files.
        * lib/url.tcl: Added Url_AccessUnInstall to remove hooks.

2002-08-29  Brent Welch <welch@panasas.com>
        * (In the tclhttpd-3-4-rel branch).  These were added on
        the suggestion of David Welton
        * lib/auth.tcl: Auth_Check checks that the path is a directory
        before rummaging around for the .tclaccess and .htaccess files
        * lib/url.tcl: Added Url_AccessInstallPrepend to put the
        access hook at the front of the search path.

2002-08-26  Brent Welch <welch@panasas.com>
        * (In the tclhttpd-3-4-rel branch)
        * lib/cgi.tcl: Fixed POST forms on Windows so we correctly set up
          the pipe to the subprocess and detect the header/body separator
        * lib/upload.tcl: Nuked the CvsReadFileHeader call
        * lib/version.tcl: Updated to 3.4.1
        * bin/httpd.tcl.new: Deleted this cruft
        As a bonus - these features:
        * lib/mtype.tcl: Added Mtype_Add and Mtype_Reset
        * lib/mime.types: added application/x-ns-proxy-autoconfig

2002-08-18  Brent Welch <welch@panasas.com>
        * (In the tclhttpd-3-4-rel branch)
        * Applied patches for virtual hosting fixes from Don Porter
          that allow virtual hosts to share an interpreter, which is
          useful if they are just name aliases for each other.
        * Applied patches from Dave Weldon that fix references to
          scriptics.com in the online docs.
        * Fixes to DIST and Makefile.boot to get the bundled distribution
          to start working.

2002-08-03  Brent Welch <welch@panasas.com>
        * Added support for If-Modified-Since header and the
          304 Not Modified return code (contributed by Brian Meagher)