@@ -6,6 +6,12 @@
         I'll note you had to had permission to retrieve the access
         control files.
         * lib/url.tcl: Added Url_AccessUnInstall to remove hooks.
+        From Petrus Vloet:
+        * lib/debug.tcl: Added /debug/enable so you can disable the
+        Debug URL.
+        * lib/direct.tcl: Added Direct_UrlRemove to support disabling
+        the debug url.
+        * htdocs/hacks.tml: Updated to explain the /debug URL features
 
 2002-08-29  Brent Welch <welch@panasas.com>
         * (In the tclhttpd-3-4-rel branch).  These were added on
